# Skills-And-Agents

./: .gitignore  AGENT_MANAGER.md  GETTING_STARTED.md  QUICKSTART.md  README.md  install.sh  pyproject.toml  schema.json
.claude/: IMPLEMENTATION_SUMMARY.md
.github/workflows/: validate-agents.yml
agent-manager/: README.md
agent-manager/src/agent_manager/: __init__.py  __main__.py
agent-manager/src/agent_manager/core/: __init__.py  parser.py  scanner.py
agent-manager/src/agent_manager/models/: __init__.py
agent-manager/src/agent_manager/ui/: __init__.py
agent-manager/src/agent_manager/ui/screens/: __init__.py  dashboard.py
agent-manager/src/agent_manager/ui/widgets/: __init__.py  preview_pane.py  stat_card.py
agent-manager/tests/: __init__.py  test_parser.py  test_scanner.py  test_symlink_manager.py
agents/: ast-grep-developer.md  codex-interface-manager.md  obsidian-note-organizer.md  project-owner-advisor.md  sre-code-reviewer.md
docs/: AGENT_MANAGER.md  GETTING_STARTED.md  QUICKSTART.md
scripts/: create_symlink.py  install.sh  validate_agents.py
skills/obsidian2epub/scripts/: convert.sh
src/agent_manager/: app.py  cli.py
src/agent_manager/core/: __init__.py  config_manager.py  symlink_manager.py  validator.py
src/agent_manager/models/: __init__.py  agent.py  config.py  skill.py
src/agent_manager/ui/screens/: __init__.py  agents.py  dashboard.py  settings.py  skills.py
src/agent_manager/ui/styles/: theme.tcss
src/agent_manager/ui/widgets/: item_list.py  preview_pane.py
